mutating-admission-controller/mutating_admission_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  labels:
    component: mutating-controller
webhooks:
- admissionReviewVersions:
  - v1
  name: test.example.com
  failurePolicy: Fail
  objectSelector:
      matchLabels:
        webhook-enabled: "true"
  clientConfig:
    # url: "https://10.0.2.15:443/mutate/deployments"
    service:
      name: controller-service
      # port: 443
      namespace: default
      path: /mutate/deployments
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN1VENDQWFHZ0F3SUJBZ0lVZG9xN1A2aC9CM3hOTk5ESzlUclJ1S2xOT0Vjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0VqRVFNQTRHQTFVRUF4TUhkR3h6TFc1aGJUQWdGdzB5TkRBMk1USXhNalUzTURCYUdBOHlNVEkwTURVeApPVEV5TlRjd01Gb3dFakVRTUE0R0ExVUVBeE1IZEd4ekxXNWhiVEJaTUJNR0J5cUdTTTQ5QWdFR0NDcUdTTTQ5CkF3RUhBMElBQkpWMDJvb3ZVa0x3cGZjaU0wczkxVzNXMzhZa2VabElKYzNic3NkaGVOTjRicnNmVjYxbVIwUGQKbEdoZEVidzArUkQ3aEt5K1JlRExOZzYzdkRTRVI4V2pnYzh3Z2N3d0RnWURWUjBQQVFIL0JBUURBZ1dnTUJNRwpBMVVkSlFRTU1Bb0 [...]
  rules:
    - apiGroups: ["apps"]
      resources:
        - "deployments"
      apiVersions:
        - "*"
      operations:
        - CREATE
  sideEffects: None
  timeoutSeconds: 30
